// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a button tag to change route if the handleRoute prop is specified 1`] = `
.emotion-2 {
  width: 100%;
  text-align: center;
  margin: 4em 0;
}

.emotion-0 {
  display: inline-block;
  box-sizing: border-box;
  padding: 0.25em 2em;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  -webkit-font-smoothing: antialiased;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  outline: 0;
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: bold;
  font-size: 16px;
  border: 2px solid #41addd;
  color: #41addd;
}

.emotion-0:active {
  background: #41addd;
  color: #fff;
}

<div
  class="emotion-2 emotion-3"
>
  <button
    class="emotion-0 emotion-1"
  >
    <h1>
      Test
    </h1>
  </button>
</div>
`;

exports[`Button should render an anchor tag if no route is specified 1`] = `
.emotion-2 {
  width: 100%;
  text-align: center;
  margin: 4em 0;
}

.emotion-0 {
  display: inline-block;
  box-sizing: border-box;
  padding: 0.25em 2em;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  -webkit-font-smoothing: antialiased;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  outline: 0;
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: bold;
  font-size: 16px;
  border: 2px solid #41addd;
  color: #41addd;
}

.emotion-0:active {
  background: #41addd;
  color: #fff;
}

<div
  class="emotion-2 emotion-3"
>
  <a
    class="emotion-0 emotion-1"
    href="http://mxstbr.com"
  >
    <h1>
      Test
    </h1>
  </a>
</div>
`;
